refactor : Collections.unmodifiablelist -> List.copyOf 메소드 변경